--- a/client/package.json
+++ b/client/package.json
@@ -2,14 +2,21 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "bootstrap": "^4.6.0",
     "delay": "^4.2.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "react-spring": "^8.0.20"
+    "react-spring": "^8.0.20",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,6 +27,7 @@
   "eslintConfig": {
     "extends": [
       "react-app",
+      "react-redux",
       "react-app/jest"
     ]
   },
